# portfolio

./: .gitignore  README.md  run.sh
backend/: dump_projects.py  pyproject.toml
backend/app/: config.py  db.py  email.py  main.py  models.py  seed.py
backend/app/routes/: contact.py  projects.py
frontend/: index.html  vite.config.ts
frontend/api/: contact.py
frontend/src/: App.tsx  api.ts  config.ts  index.css  projects.json
frontend/src/components/: ProjectCard.tsx
frontend/src/pages/: About.tsx  Contact.tsx  Home.tsx  ProjectDetail.tsx  Projects.tsx
